--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,6 @@
     <title>Tran Le</title>
   </head>
   <body>
-    <img src="images/firefox-icon.png" alt="My test image" />
+    <img src="https://raw.githubusercontent.com/CIT82/tranl-pub/main/images/tranle.jpg" alt="My test image" />
   </body>
 </html>
