--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,6 @@
     <title>Tran Le</title>
   </head>
   <body>
-    <img src="../images/tranle.jpg" alt="My test image" />
+    <img src="../images/tranle.jpg" alt="Tran Le" />
   </body>
 </html>
