--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <title>Tran Le</title>
   </head>
   <body>
+    <h1>This is me! Tran Le</h1>
     <img src="../images/tranle.jpg" alt="Tran Le" />
   </body>
 </html>
