--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>This is me! Tran Le</h1>
+    <h2>From My Local System</h2>
     <img src="../images/tranle.jpg" alt="Tran Le" />
   </body>
 </html>
