creating contact.html and adding styling

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,6 +13,7 @@
   <body class="outline">
     <header>
       <h1>Welcome to my website</h1>
+      <a href="index.html">My Index</a>
     </header>
     <main>
       <p>This webpage demostrates my first efforts in creating a website</p>
