--- a/pages/index.html
+++ b/pages/index.html
@@ -9,10 +9,10 @@
       src = "main.js";
     </script>
   </head>
-
   <body class="outline">
     <header>
       <h1>Welcome to my website</h1>
+      <a href="contact.html">Contact Info</a>
     </header>
     <main>
       <p>This webpage demostrates my first efforts in creating a website</p>
