--- a/p0/browse.html
+++ b/p0/browse.html
@@ -8,7 +8,7 @@ aa<!DOCTYPE html>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Cyborg - Awesome HTML5 Template</title>
+    <title>Yggrasil - A Convergence of Worlds</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="">
+                        <img src="assets/images/testlogo2.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -184,32 +184,32 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <ul>
                   <li>
                     <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
-                    <h4>Fortnite</h4>
-                    <h6>Sandbox</h6>
+                    <h4>Smite</h4>
+                    <h6>MOBA</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
                     <span><i class="fa fa-download" style="color: #ec6090;"></i> 2.2M</span>
                     <div class="download">
-                      <a href="#"><i class="fa fa-download"></i></a>
+                      <a href="https://www.smitegame.com/download/"><i class="fa fa-download"></i></a>
                     </div>
                   </li>
                   <li>
                     <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
-                    <h4>CS-GO</h4>
-                    <h6>Legendary</h6>
+                    <h4>Genshin Impact</h4>
+                    <h6>Action Role-playing</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
                     <span><i class="fa fa-download" style="color: #ec6090;"></i> 2.2M</span>
                     <div class="download">
-                      <a href="#"><i class="fa fa-download"></i></a>
+                      <a href="https://genshin.hoyoverse.com/en/home"><i class="fa fa-download"></i></a>
                     </div>
                   </li>
                   <li>
                     <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
-                    <h4>PugG</h4>
-                    <h6>Battle Royale</h6>
+                    <h4>VR Chat</h4>
+                    <h6>VR Game</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
                     <span><i class="fa fa-download" style="color: #ec6090;"></i> 2.2M</span>
                     <div class="download">
-                      <a href="#"><i class="fa fa-download"></i></a>
+                      <a href="https://store.steampowered.com/app/438100/VRChat/?utm-source=hello-home"><i class="fa fa-download"></i></a>
                     </div>
                   </li>
                 </ul>
@@ -233,8 +233,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-01.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>Go To Your Profile</h4>
-                    <p>Cyborg Gaming is free HTML CSS website template provided by TemplateMo. This is Bootstrap v5.2.0 layout.</p>
+                    <h4>Choose your Platform</h4>
+                    <p>To start of streaming, you can choose an already existing platform such as <a href="https://www.twitch.tv/">Twitch</a> or <a href="https://kick.com/categories">Kick</a> and create your profile</p>
+                    
                   </div>
                 </div>
                 <div class="col-lg-4">
@@ -242,8 +243,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-02.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>Live Stream Button</h4>
-                    <p>If you wish to support us, you can make a <a href="https://paypal.me/templatemo" target="_blank">small contribution via PayPal</a> to info [at] templatemo.com</p>
+                    <h4>Equipments</h4>
+                    <p>Having the neccessary equipments can help you with kickstarting your livestream career: <a href="https://www.amazon.com/streaming-equipment/s?k=streaming+equipment">Equipments</a></p>
                   </div>
                 </div>
                 <div class="col-lg-4">
@@ -251,8 +252,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-03.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>You Are Live</h4>
-                    <p>You are not allowed to redistribute this template's downloadable ZIP file on any other template collection website.</p>
+                    <h4>Guidelines</h4>
+                    <p>Streaming might not be for everyone, so having a <a href="https://www.youtube.com/watch?v=0i9gkprYekI">Guide</a> can be really helpful, as well as abbiding by the <a href="https://safety.twitch.tv/s/article/Community-Guidelines?language=en_US">Community Guideline</a> </p>
                   </div>
                 </div>
                 <div class="col-lg-12">
