--- a/p0/profile.html
+++ b/p0/profile.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Cyborg - Awesome HTML5 Template</title>
+    <title>Yggrasil - A Convergence of Worlds</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="">
+                        <img src="assets/images/testlogo2.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -93,24 +93,24 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/profile.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
-                      <span>Offline</span>
-                      <h4>Alan Smithee</h4>
-                      <p>You Haven't Gone Live yet. Go Live By Touching The Button Below.</p>
+                      <span>Online</span>
+                      <h4>Tran Le</h4>
+                      <p>Hello travelers, my name is Tran Le and this is my domain. A convegence of worlds for streamers and users alike to experience</p>
                       <div class="main-border-button">
-                        <a href="#">Start Live Stream</a>
+                        <a href="https://www.twitch.tv/p/en/stream/">Start Live Stream</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <ul>
-                      <li>Games Downloaded <span>3</span></li>
+                      <li>Games Downloaded <span>153</span></li>
                       <li>Friends Online <span>16</span></li>
                       <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>29</span></li>
+                      <li>Clips <span>4</span></li>
                     </ul>
                   </div>
                 </div>
@@ -120,14 +120,14 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <div class="row">
                         <div class="col-lg-12">
                           <div class="heading-section">
-                            <h4><em>Your Most Popular</em> Clips</h4>
+                            <h4><em>My Most Favorite</em> Clips</h4>
                           </div>
                         </div>
                         <div class="col-lg-3 col-sm-6">
                           <div class="item">
                             <div class="thumb">
                               <img src="assets/images/clip-01.jpg" alt="" style="border-radius: 23px;">
-                              <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                              <a href="" target="_blank"><i class="fa fa-play"></i></a>
                             </div>
                             <div class="down-content">
                               <h4>First Clip</h4>
@@ -194,31 +194,31 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="item">
                 <ul>
                   <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Dota 2</h4><span>Sandbox</span></li>
+                  <li><h4>Smite</h4><span>MOBA</span></li>
                   <li><h4>Date Added</h4><span>24/08/2036</span></li>
                   <li><h4>Hours Played</h4><span>634 H 22 Mins</span></li>
                   <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><div class="main-border-button border-active"><a href="https://www.smitegame.com/download/">Downloaded</a></div></li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
                   <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Fortnite</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>22/06/2036</span></li>
-                  <li><h4>Hours Played</h4><span>745 H 22 Mins</span></li>
+                  <li><h4>VR Chat</h4><span>VR Game</span></li>
+                  <li><h4>Date Added</h4><span>2/20/2023</span></li>
+                  <li><h4>Hours Played</h4><span>1089 H 22 Mins</span></li>
                   <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><div class="main-border-button border-active"><a href="https://store.steampowered.com/app/438100/VRChat/?utm-source=hello-home">Downloaded</a></div></li>
                 </ul>
               </div>
               <div class="item last-item">
                 <ul>
                   <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>CS-GO</h4><span>Sandbox</span></li>
+                  <li><h4>Genshin Impact</h4><span>Action Role-Playing</span></li>
                   <li><h4>Date Added</h4><span>21/04/2022</span></li>
                   <li><h4>Hours Played</h4><span>632 H 46 Mins</span></li>
                   <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><div class="main-border-button border-active"><a href="https://genshin.hoyoverse.com/en/">Downloaded</a></div></li>
                 </ul>
               </div>
             </div>
