my updated website

--- a/p0/details.html
+++ b/p0/details.html
@@ -148,7 +148,16 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <img src="assets/images/details-03.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-12">
-                      <p>Cyborg Gaming is free HTML CSS website template provided by TemplateMo. This is Bootstrap v5.2.0 layout. You can make a <a href="https://paypal.me/templatemo" target="_blank">small contribution via PayPal</a> to info [at] templatemo.com and thank you for supporting. If you want to get the PSD source files, please contact us. Lorem ipsum dolor sit consectetur es dispic dipiscingei elit, sed doers eiusmod lisum hored tempor.</p>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut aliquid sed, eveniet necessitatibus voluptas, maiores adipisci saepe eum expedita quod qui a et laudantium possimus maxime delectus voluptates hic molestias?
+                      Magni hic impedit voluptatem ullam doloribus doloremque laborum voluptate enim, facere cum libero quaerat ea dolore id optio quos quia commodi placeat itaque nihil. Similique vitae odio ad sunt nam.
+                      Sunt, tenetur corporis nam aliquid officia dignissimos minus, suscipit ab sint similique sed, inventore cum! Saepe delectus, repellat libero autem facilis cum modi, quaerat quia optio molestias deserunt, neque explicabo?
+                      Delectus repudiandae sapiente ab sed molestiae molestias ex eius enim laudantium. Illo sequi ex tempora. Corporis itaque reprehenderit deleniti quis provident sunt atque illum natus. Natus quis expedita velit excepturi.
+                      Necessitatibus sunt fugit dolor. Perferendis, voluptas eum expedita dolorum quo, quae dignissimos tempore velit consequatur minima debitis facere neque ea quaerat iusto! Cupiditate tempora repellat maiores ex, sequi voluptatem accusantium!
+                      Laborum doloribus earum error esse perferendis veniam cum sed. Ut veniam, iste rem exercitationem sint quaerat ducimus voluptatem reprehenderit laboriosam facere officiis, totam a provident magnam laborum praesentium maiores beatae.
+                      Incidunt aliquid veritatis hic corrupti dolores itaque eaque expedita, quos aut enim ipsum saepe quidem eum nihil quia, deleniti, assumenda pariatur dolorum praesentium repudiandae iusto minima. Iste sapiente provident consequuntur?
+                      Quibusdam, facere. Ratione, hic? Minima sequi illum, repellendus eius voluptatem aperiam quaerat voluptates omnis inventore, nisi earum asperiores deleniti sint veritatis consequuntur quidem numquam doloremque dolor enim, eaque saepe assumenda.
+                      Omnis, fugiat animi! Corporis facere quam repudiandae architecto expedita incidunt nam. Consectetur, alias? Perspiciatis officiis inventore, ex repudiandae placeat facere exercitationem nihil tempore animi odit reprehenderit? Consequuntur culpa enim officiis?
+                      Inventore animi quisquam sint quas vitae odit numquam veritatis expedita quod, pariatur aut tenetur ipsum esse eveniet voluptatibus. Magnam, numquam! Animi pariatur, soluta doloremque molestias repudiandae dolorem exercitationem in iste.</p>
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
