new images page

--- a/p0/index.html
+++ b/p0/index.html
@@ -65,6 +65,7 @@
                         <li><a href="browse.html">Browse</a></li>
                         <li><a href="details.html">About</a></li>
                         <li><a href="streams.html">Streams</a></li>
+                        <li><a href="images.html">Featured</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
