--- a/p0/details.html
+++ b/p0/details.html
@@ -67,8 +67,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="browse.html">Browse</a></li>
-                        <li><a href="details.html" class="active">Details</a></li>
+                        <li><a href="details.html" class="active">About</a></li>
                         <li><a href="streams.html">Streams</a></li>
+                        <li><a href="images.html">Featured</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
