--- a/p0/images.html
+++ b/p0/images.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Cyborg - Inner Page</title>
+  <title>Yggdrasil - Featured</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
@@ -119,7 +119,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+          <p>Copyright © 2036 <a href="#">Yggdrasil Gaming</a> Company. All rights reserved.
             <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
             Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
           </p>
