new contact page

--- a/p0/contact.html
+++ b/p0/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Yggdrasil - COntac</title>
+  <title>Yggdrasil - Featured</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
@@ -58,8 +58,8 @@
                 <li><a href="details.html">About</a></li>
                 <li><a href="streams.html">Streams</a></li>
                 <li><a href="images.html">Featured</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -78,57 +78,40 @@
         <div class="page-content">
 
           <!-- Featured Games Start -->
-          <div class="row">
-            <div class="col-lg-8">
-              <div class="featured-games header-text">
-                <div class="heading-section">
-                  <h4><em>Live</em> Streams</h4>
-                  <h5>Our featured streamers:</h5>
-                  <h5>Original image: Gawr Gura</h5>
-                  <img src="assets/images/Original.jpeg" alt="Original version" width="300" height="500">
-                 <p>Megapixels: 800 x 1000</p>
-                 <p>Size = 171 KB</p>
-                 <h5>Resized image:</h5>
-                 <img src="assets/images/Gura Copy.jpeg" alt="Resized version" width="300" height="500">
-                 <p>Megapixels: 717 x 658</p>
-                 <p>Size = 92.2 KB</p>
-                 <h5>Original image: Ninja</h5>
-                 <img src="assets/images/Ninja.jpg" alt="Original version" width="300" height="500">
-                 <p>Megapixels: 1800 x 1800</p>
-                 <p>Size = 208 KB</p>
-                 <h5>Resized image:</h6>
-                <img src="assets/images/Copy Ninja (2).jpg" alt="Resized version" width="300" height="600">
-                <p>Megapixels: 1800 x 1800</p>
-                <p>Size = 92.5 KB</p>
-                <h5>Original image: Tuonto</h6>
-                <img src="assets/images/Original.jpg" alt="Resized version" width="300" height="600">
-                <p>Megapixels: 900 x 450</p>
-                <p>Size = 200 KB</p>
-                <h5>Resized image:</h5>
-                <img src="assets/images/Copy Tuonto.jpg" alt="Resized version" width="300" height="600">
-                <p>Megapixels: 471  x 349</p>
-                <p>Size = 26.6 KB</p>
-                </div>
-                <div class="owl-features owl-carousel">
-                  <!-- Featured Games Content -->
-                </div>
-              </div>
-          
-          <!-- Live Stream End -->
+          <p style="color: white;">
+            If you have any addtional information or inqueries, please contact us!
+        </p>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Yggdrasil Gaming</a> Company. All rights reserved.
-            <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-            Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
+        <form action="">
+            <div class="mb-3">
+                <label for="nameInput" class="form-label" style="color: white;">Name</label>
+                <input type="text" class="form-control" id="nameInput" />
+            </div>
+            <div class="mb-3">
+                <label for="emailInput" class="form-label" style="color: white;">Email address</label>
+                <input
+                    type="email"
+                    class="form-control"
+                    id="emailInput"
+                    placeholder="name@example.com"
+                />
+            </div>
+            <div class="mb-3">
+                <label for="subjectInput" class="form-label" style="color: white;">Subject</label>
+                <input type="text" class="form-control" id="subjectInput" />
+            </div>
+            <div class="mb-3">
+                <label for="messageInput" class="form-label" style="color: white;">Message</label>
+                <textarea
+                    class="form-control"
+                    id="messageInput"
+                    rows="3"
+                ></textarea>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-light">Send</button>
+            </div>
+        </form>
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
