--- a/p0/browse.html
+++ b/p0/browse.html
@@ -69,7 +69,6 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html" class="active">Browse</a></li>
                         <li><a href="details.html">About</a></li>
                         <li><a href="streams.html">Streams</a></li>
-                        <li><a href="images.html">Featured</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
@@ -394,7 +393,7 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
+          <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. All rights reserved. 
           
           <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a> Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
         </div>
