--- a/p0/ceo.html
+++ b/p0/ceo.html
@@ -87,41 +87,26 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="row">
       <div class="col-lg-12">
         <div class="page-content">
- <!-- Featured Games Start -->
- <p style="color: white;">
-  If you have any addtional information or inqueries, please contact us!
-</p>
-<form action="">
-  <div class="mb-3">
-      <label for="nameInput" class="form-label" style="color: white;">Name</label>
-      <input type="text" class="form-control" id="nameInput" />
-  </div>
-  <div class="mb-3">
-      <label for="emailInput" class="form-label" style="color: white;">Email address</label>
-      <input
-          type="email"
-          class="form-control"
-          id="emailInput"
-          placeholder="name@example.com"
-      />
-  </div>
-  <div class="mb-3">
-      <label for="subjectInput" class="form-label" style="color: white;">Subject</label>
-      <input type="text" class="form-control" id="subjectInput" />
-  </div>
-  <div class="mb-3">
-      <label for="messageInput" class="form-label" style="color: white;">Message</label>
-      <textarea
-          class="form-control"
-          id="messageInput"
-          rows="3"
-      ></textarea>
-  </div>
-  <div class="col-12">
-      <button type="submit" class="btn btn-light">Send</button>
-  </div>
-</form>
-  
+
+          <!-- ***** Banner Start ***** -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="main-profile ">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                  </div>
+                  <div class="col-lg-4 align-self-center">
+                    <div class="main-info header-text">
+                      <span>Online</span>
+                      <h4>Tran Le</h4>
+                      <p>Tran Le is a dynamic and visionary leader with a passion for revolutionizing the digital entertainment landscape. With a background in technology and business management, Tran brings a unique blend of strategic acumen and creative flair to his role as CEO of Yggdrasil. Prior to spearheading Yggdrasil, Tran held key leadership positions in the tech industry, where he gained invaluable experience in product development, marketing, and corporate strategy.</p>
+                      <div class="main-border-button">
+        
+                      </div>
+                    </div>
+                  </div>
+
   <footer>
     <div class="container">
       <div class="row">
