--- a/p0/index.html
+++ b/p0/index.html
@@ -65,7 +65,6 @@
                         <li><a href="browse.html">Browse</a></li>
                         <li><a href="details.html">About</a></li>
                         <li><a href="streams.html">Streams</a></li>
-                        <li><a href="images.html">Featured</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
@@ -259,7 +258,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Yggdrasil's Gaming</a> Company. All rights reserved. 
+          <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. All rights reserved. 
           
           <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>  Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a></p>
         </div>
