--- a/p0/jason.html
+++ b/p0/jason.html
@@ -87,40 +87,40 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="row">
       <div class="col-lg-12">
         <div class="page-content">
- <!-- Featured Games Start -->
- <p style="color: white;">
-  If you have any addtional information or inqueries, please contact us!
-</p>
-<form action="">
-  <div class="mb-3">
-      <label for="nameInput" class="form-label" style="color: white;">Name</label>
-      <input type="text" class="form-control" id="nameInput" />
+
+          <!-- ***** Banner Start ***** -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="main-profile ">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                  </div>
+                  <div class="col-lg-4 align-self-center">
+                    <div class="main-info header-text">
+                      <span>Online</span>
+                      <h4>Jason Vang</h4>
+                      <p>A dedicated and knowledgeable technical support specialist with a passion for troubleshooting and providing excellent customer service. Experienced in assisting users with streaming platforms and resolving technical issues promptly and efficiently. Proficient in communication and problem-solving, with a commitment to ensuring a seamless streaming experience for all users.</p>
+                      <div class="main-border-button">
+                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 align-self-center">
+                    <ul>
+                      <li>Games Downloaded <span>153</span></li>
+                      <li>Friends Online <span>16</span></li>
+                      <li>Live Streams <span>None</span></li>
+                      <li>Clips <span>4</span></li>
+                    </ul>
+                  </div>
+                </div>
+
+          <!-- ***** Gaming Library End ***** -->
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="mb-3">
-      <label for="emailInput" class="form-label" style="color: white;">Email address</label>
-      <input
-          type="email"
-          class="form-control"
-          id="emailInput"
-          placeholder="name@example.com"
-      />
-  </div>
-  <div class="mb-3">
-      <label for="subjectInput" class="form-label" style="color: white;">Subject</label>
-      <input type="text" class="form-control" id="subjectInput" />
-  </div>
-  <div class="mb-3">
-      <label for="messageInput" class="form-label" style="color: white;">Message</label>
-      <textarea
-          class="form-control"
-          id="messageInput"
-          rows="3"
-      ></textarea>
-  </div>
-  <div class="col-12">
-      <button type="submit" class="btn btn-light">Send</button>
-  </div>
-</form>
   
   <footer>
     <div class="container">
