--- a/p0/profile.html
+++ b/p0/profile.html
@@ -69,7 +69,6 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html">Browse</a></li>
                         <li><a href="details.html">About</a></li>
                         <li><a href="streams.html">Streams</a></li>
-                        <li><a href="images.html">Featured</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="profile.html" class="active">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
@@ -95,13 +94,13 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/popular-01.jpg" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
                       <span>Online</span>
-                      <h4>Tran Le</h4>
-                      <p>Hello travelers, my name is Tran Le and this is my domain. A convegence of worlds for streamers and users alike to experience</p>
+                      <h4>Your name</h4>
+                      <p>Change your status</p>
                       <div class="main-border-button">
                         <a href="https://www.twitch.tv/p/en/stream/">Start Live Stream</a>
                       </div>
@@ -235,7 +234,7 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
+          <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. All rights reserved. 
           
           <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>  Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a></p>
         </div>
