--- a/p0/seng.html
+++ b/p0/seng.html
@@ -87,40 +87,40 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="row">
       <div class="col-lg-12">
         <div class="page-content">
- <!-- Featured Games Start -->
- <p style="color: white;">
-  If you have any addtional information or inqueries, please contact us!
-</p>
-<form action="">
-  <div class="mb-3">
-      <label for="nameInput" class="form-label" style="color: white;">Name</label>
-      <input type="text" class="form-control" id="nameInput" />
+
+          <!-- ***** Banner Start ***** -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="main-profile ">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                  </div>
+                  <div class="col-lg-4 align-self-center">
+                    <div class="main-info header-text">
+                      <span>Online</span>
+                      <h4>Seng Her</h4>
+                      <p>A dynamic and community-focused professional with a passion for fostering positive relationships and driving engagement within online communities. Experienced in building and managing vibrant communities around streaming platforms, Seng Her is adept at creating inclusive spaces where users feel valued and connected. Skilled in communication, moderation, and content creation, Seng is committed to enhancing the Yggdrasil Streaming Company's community experience.</p>
+                      <div class="main-border-button">
+                        <a href="https://www.twitch.tv/p/en/stream/">Start Live Stream</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 align-self-center">
+                    <ul>
+                      <li>Games Downloaded <span>153</span></li>
+                      <li>Friends Online <span>16</span></li>
+                      <li>Live Streams <span>None</span></li>
+                      <li>Clips <span>4</span></li>
+                    </ul>
+                  </div>
+                </div>
+
+          <!-- ***** Gaming Library End ***** -->
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="mb-3">
-      <label for="emailInput" class="form-label" style="color: white;">Email address</label>
-      <input
-          type="email"
-          class="form-control"
-          id="emailInput"
-          placeholder="name@example.com"
-      />
-  </div>
-  <div class="mb-3">
-      <label for="subjectInput" class="form-label" style="color: white;">Subject</label>
-      <input type="text" class="form-control" id="subjectInput" />
-  </div>
-  <div class="mb-3">
-      <label for="messageInput" class="form-label" style="color: white;">Message</label>
-      <textarea
-          class="form-control"
-          id="messageInput"
-          rows="3"
-      ></textarea>
-  </div>
-  <div class="col-12">
-      <button type="submit" class="btn btn-light">Send</button>
-  </div>
-</form>
   
   <footer>
     <div class="container">
