new website updates

--- a/p0/details.html
+++ b/p0/details.html
@@ -126,7 +126,7 @@
           <div class="game-details">
             <div class="row">
               <div class="col-lg-12">
-                <h2>Yggdrasil Details</h2>
+                <h2>Yggdrasil</h2>
               </div>
               <div class="col-lg-12">
                 <div class="content">
@@ -134,22 +134,22 @@
                     <div class="col-lg-6">
                       <div class="left-info">
                         <div class="left">
-                          <h4>Fortnite</h4>
-                          <span>Sandbox</span>
+                          <h4>Yggdrasil</h4>
+                          <span><em>Streaming Company</em></span>
                         </div>
                         <ul>
-                          <li><i class="fa fa-star"></i> 4.8</li>
-                          <li><i class="fa fa-download"></i> 2.3M</li>
+                          <li><i class="fa fa-star"></i> 5.0</li>
+                          <li><i class="fa fa-download"></i> 10M</li>
                         </ul>
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="right-info">
                         <ul>
-                          <li><i class="fa fa-star"></i> 4.8</li>
-                          <li><i class="fa fa-download"></i> 2.3M</li>
-                          <li><i class="fa fa-server"></i> 36GB</li>
-                          <li><i class="fa fa-gamepad"></i> Action</li>
+                          <li><i class="fa fa-star"></i> 5.0</li>
+                          <li><i class="fa fa-download"></i> 10M</li>
+                          <li><i class="fa fa-server"></i> 700MB</li>
+                          <li><i class="fa fa-gamepad"></i> Livestream</li>
                         </ul>
                       </div>
                     </div>
@@ -163,20 +163,15 @@
                       <img src="assets/images/details-03.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-12">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut aliquid sed, eveniet necessitatibus voluptas, maiores adipisci saepe eum expedita quod qui a et laudantium possimus maxime delectus voluptates hic molestias?
-                      Magni hic impedit voluptatem ullam doloribus doloremque laborum voluptate enim, facere cum libero quaerat ea dolore id optio quos quia commodi placeat itaque nihil. Similique vitae odio ad sunt nam.
-                      Sunt, tenetur corporis nam aliquid officia dignissimos minus, suscipit ab sint similique sed, inventore cum! Saepe delectus, repellat libero autem facilis cum modi, quaerat quia optio molestias deserunt, neque explicabo?
-                      Delectus repudiandae sapiente ab sed molestiae molestias ex eius enim laudantium. Illo sequi ex tempora. Corporis itaque reprehenderit deleniti quis provident sunt atque illum natus. Natus quis expedita velit excepturi.
-                      Necessitatibus sunt fugit dolor. Perferendis, voluptas eum expedita dolorum quo, quae dignissimos tempore velit consequatur minima debitis facere neque ea quaerat iusto! Cupiditate tempora repellat maiores ex, sequi voluptatem accusantium!
-                      Laborum doloribus earum error esse perferendis veniam cum sed. Ut veniam, iste rem exercitationem sint quaerat ducimus voluptatem reprehenderit laboriosam facere officiis, totam a provident magnam laborum praesentium maiores beatae.
-                      Incidunt aliquid veritatis hic corrupti dolores itaque eaque expedita, quos aut enim ipsum saepe quidem eum nihil quia, deleniti, assumenda pariatur dolorum praesentium repudiandae iusto minima. Iste sapiente provident consequuntur?
-                      Quibusdam, facere. Ratione, hic? Minima sequi illum, repellendus eius voluptatem aperiam quaerat voluptates omnis inventore, nisi earum asperiores deleniti sint veritatis consequuntur quidem numquam doloremque dolor enim, eaque saepe assumenda.
-                      Omnis, fugiat animi! Corporis facere quam repudiandae architecto expedita incidunt nam. Consectetur, alias? Perspiciatis officiis inventore, ex repudiandae placeat facere exercitationem nihil tempore animi odit reprehenderit? Consequuntur culpa enim officiis?
-                      Inventore animi quisquam sint quas vitae odit numquam veritatis expedita quod, pariatur aut tenetur ipsum esse eveniet voluptatibus. Magnam, numquam! Animi pariatur, soluta doloremque molestias repudiandae dolorem exercitationem in iste.</p>
+                      <p style="color:white">In the ancient times of streaming entertainment, when the realms of imagination and technology intertwined, there arose a company known as Yggdrasil, named after the mythical World Tree of Norse mythology. Founded by a group of visionary entrepreneurs who sought to bridge the gap between the mortal world and the fantastical realms of storytelling, Yggdrasil emerged as a beacon of innovation in the streaming industry. As word of Yggdrasil spread throughout the realms, storytellers from every corner of existence flocked to the platform, eager to share their tales with audiences far and wide. From the epic sagas of Norse gods to the enchanting folklore of distant lands, Yggdrasil became a repository of infinite stories, where viewers could lose themselves in worlds beyond imagination.
+
+                        But with great power comes great responsibility, and as Yggdrasil grew in stature, so too did the challenges it faced. Dark forces sought to corrupt the platform, spreading chaos and discord in their wake. Yet, guided by the wisdom of the sage and the cunning of the trickster god, Yggdrasil stood strong against the tide of darkness, its light shining bright for all to see.
+                        
+                        And so, the saga of Yggdrasil continues, a testament to the enduring power of storytelling and the boundless possibilities of the digital age. As long as there are tales to be told and dreams to be shared, Yggdrasil will remain steadfast, a bastion of imagination in an ever-changing world.</p>
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="#">Download Fortnite Now!</a>
+                        <a href="contact.html">Join us now!</a>
                       </div>
                     </div>
                   </div>
@@ -233,7 +228,7 @@
               <div class="col-lg-6">
                 <div class="item">
                   <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
-                  <h4>Seng Her</h4><span><a href="seng.html">Community Manager</a></span>
+                  <h4>Valorie Phaphapong</h4><span><a href="seng.html">Community Manager</a></span>
                 
                 </div>
               </div>
