--- a/p0/profile.html
+++ b/p0/profile.html
@@ -112,7 +112,7 @@
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
-                      <span>Online</span>
+                      <span>Offline</span>
                       <h4>Your name</h4>
                       <p>Change your status</p>
                       <div class="main-border-button">
@@ -122,9 +122,9 @@
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
+                      <li>Games Downloaded <span>#</span></li>
+                      <li>Friends Online <span>#</span></li>
+                      <li>Live Streams <span>#</span></li>
                       <li>Clips <span>4</span></li>
                     </ul>
                   </div>
