--- a/p0/savannah.html
+++ b/p0/savannah.html
@@ -108,7 +108,7 @@
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/Savannah.jpg" alt="" style="text-align: center;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
