--- a/p0/seng.html
+++ b/p0/seng.html
@@ -108,15 +108,15 @@
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/newprofile.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/Valorie.jpg" alt="" style="text-align: center;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
                       <span>Online</span>
-                      <h4>Seng Her</h4>
+                      <h4>Valorie Phaphapong</h4>
                       <p>A dynamic and community-focused professional with a passion for fostering positive relationships and driving engagement within online communities. Experienced in building and managing vibrant communities around streaming platforms, Seng Her is adept at creating inclusive spaces where users feel valued and connected. Skilled in communication, moderation, and content creation, Seng is committed to enhancing the Yggdrasil Streaming Company's community experience.</p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Start Live Stream</a>
+                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
                       </div>
                     </div>
                   </div>
