--- a/p0/sitemap.html
+++ b/p0/sitemap.html
@@ -111,13 +111,17 @@
              <ul><a href="details.html">About</a></ul>
              <ul><a href="streams.html">Streams</a></ul>
              <ul><a href="contact.html">Contact</a></ul>
-             <ul><a href="profile.html">Profile</a></ul>
+             <ul><a href="ceo.html">CEO</a></ul>
+             <ul><a href="kina.html">Kina</a></ul>
+             <ul><a href="jason.html">Jason</a></ul>
+             <ul><a href="mao.html">Mao</a></ul>
+             <ul><a href="savannah.html">Savannah</a></ul>
+             <ul><a href="seng.html">Valorie</a></ul>
 
           
          
 
   
-
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
