add charity page

--- a/p0/details.html
+++ b/p0/details.html
@@ -171,7 +171,7 @@
                     </div>
                     <div class="col-lg-12">
                       <div class="main-border-button">
-                        <a href="contact.html">Join us now!</a>
+                        <a href="charity.html">Contribute to our cause!</a>
                       </div>
                     </div>
                   </div>
