--- a/p0/sitemap.html
+++ b/p0/sitemap.html
@@ -117,6 +117,7 @@
              <ul><a href="mao.html">Mao</a></ul>
              <ul><a href="savannah.html">Savannah</a></ul>
              <ul><a href="seng.html">Valorie</a></ul>
+             <ul><a href="charity.html">Charity</a></ul>
 
           
          
