--- a/p0/contact.html
+++ b/p0/contact.html
@@ -103,7 +103,9 @@
         <div class="page-content">
  <!-- Featured Games Start -->
  <p style="color: white;">
-  If you have any addtional information or inqueries, please contact us!
+  If you have any addtional information or inqueries, we're here to help! Whether you have questions, need technical support, or want to share your feedback, feel free to reach out. Your satisfaction is our priority. If you've enjoyed our service, we'd appreciate your review. 
+Your feedback helps us improve and ensures we continue delivering the best streaming experience possible.
+
 </p>
 <form action="">
   <div class="mb-3">
