--- a/p0/sitemap.html
+++ b/p0/sitemap.html
@@ -111,6 +111,7 @@
              <ul><a href="details.html">About</a></ul>
              <ul><a href="streams.html">Streams</a></ul>
              <ul><a href="contact.html">Contact</a></ul>
+             <ul><a href="profile.html">Profile</a></ul>
              <ul><a href="ceo.html">CEO</a></ul>
              <ul><a href="kina.html">Kina</a></ul>
              <ul><a href="jason.html">Jason</a></ul>
