--- a/p0/index.html
+++ b/p0/index.html
@@ -183,7 +183,7 @@
                         <div class="col-lg-6 col-sm-6">
                           <div class="item">
                             <img src="assets/images/Fortnite.png" alt="">
-                            <h4>Fortnite<br><span>Battle Royal</span></h4>
+                            <h4><a href="https://store.epicgames.com/en-US/p/fortnite">Fortnite</a><br><span>Battle Royal</span></h4>
                             <ul>
                               <li><i class="fa fa-star"></i> 5.0</li>
                               <li><i class="fa fa-download"></i> 400M</li>
@@ -196,7 +196,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/VRChat.webp" alt="">
-                      <h4>VRChat<br><span>Max 3D</span></h4>
+                      <h4><a href="https://store.steampowered.com/app/438100/VRChat/">VRChat</a><br><span>Max 3D</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 3M</li>
@@ -206,7 +206,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/Smite.png" alt="">
-                      <h4>Smite<br><span>MOBA</span></h4>
+                      <h4><a href="https://www.smitegame.com/download/">Smite</a><br><span>MOBA</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.7</li>
                         <li><i class="fa fa-download"></i> 10M</li>
@@ -228,7 +228,7 @@
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4><em>Gaming</em> Library</h4>
               </div>
               <div class="item">
                 <ul>
@@ -279,7 +279,6 @@
         <div class="col-lg-12">
           <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. All rights reserved. 
           
-          <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>  Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a></p>
         </div>
       </div>
     </div>
